tests/c_headers/net_ip.nim


proc net_ipv6_addr_create_iid*(`addr`: ptr in6_addr; lladdr: ptr net_linkaddr) =
  UNALIGNED_PUT(htonl(0xfe800000), addr(`addr`.s6_addr32[0]))
  UNALIGNED_PUT(0, addr(`addr`.s6_addr32[1]))
  case lladdr.len
  of 2:                        ##  The generated IPv6 shall not toggle the
      ##  Universal/Local bit. RFC 6282 ch 3.2.2
      ##
    if lladdr.`type` == NET_LINK_IEEE802154 or lladdr.`type` == NET_LINK_CANBUS:
      UNALIGNED_PUT(0, addr(`addr`.s6_addr32[2]))
      `addr`.s6_addr[11] = 0xff
      `addr`.s6_addr[12] = 0xfe
      `addr`.s6_addr[13] = 0'u
      `addr`.s6_addr[14] = lladdr.`addr`[0]
      `addr`.s6_addr[15] = lladdr.`addr`[1]
  of 6:                        ##  We do not toggle the Universal/Local bit
      ##  in Bluetooth. See RFC 7668 ch 3.2.2
      ##
    memcpy(addr(`addr`.s6_addr[8]), lladdr.`addr`, 3)
    `addr`.s6_addr[11] = 0xff
    `addr`.s6_addr[12] = 0xfe
    memcpy(addr(`addr`.s6_addr[13]), lladdr.`addr` + 3, 3)
    when defined(CONFIG_NET_L2_BT_ZEP1656):
      ##  Workaround against older Linux kernel BT IPSP code.
      ##  This will be removed eventually.
      ##
      if lladdr.`type` == NET_LINK_BLUETOOTH:
        `addr`.s6_addr[8] = `addr`.s6_addr[8] xor 0x02
    if lladdr.`type` == NET_LINK_ETHERNET:
      `addr`.s6_addr[8] = `addr`.s6_addr[8] xor 0x02
  of 8:
    memcpy(addr(`addr`.s6_addr[8]), lladdr.`addr`, lladdr.len)
    `addr`.s6_addr[8] = `addr`.s6_addr[8] xor 0x02

## *
##   @brief Check if given address is based on link layer address
##
##   @return True if it is, False otherwise
##

proc net_ipv6_addr_based_on_ll*(`addr`: ptr in6_addr; lladdr: ptr net_linkaddr): bool =
  if not `addr` or not lladdr:
    return false
  case lladdr.len
  of 2:
    if not memcmp(addr(`addr`.s6_addr[14]), lladdr.`addr`, lladdr.len) and
        `addr`.s6_addr[8] == 0'u and `addr`.s6_addr[9] == 0'u and
        `addr`.s6_addr[10] == 0'u and `addr`.s6_addr[11] == 0xff and
        `addr`.s6_addr[12] == 0xfe:
      return true
  of 6:
    if lladdr.`type` == NET_LINK_ETHERNET:
      if not memcmp(addr(`addr`.s6_addr[9]), addr(lladdr.`addr`[1]), 2) and
          not memcmp(addr(`addr`.s6_addr[13]), addr(lladdr.`addr`[3]), 3) and
          `addr`.s6_addr[11] == 0xff and `addr`.s6_addr[12] == 0xfe and
          (`addr`.s6_addr[8] xor 0x02) == lladdr.`addr`[0]:
        return true
    elif lladdr.`type` == NET_LINK_BLUETOOTH:
      if not memcmp(addr(`addr`.s6_addr[9]), addr(lladdr.`addr`[1]), 2) and
          not memcmp(addr(`addr`.s6_addr[13]), addr(lladdr.`addr`[3]), 3) and
          `addr`.s6_addr[11] == 0xff and `addr`.s6_addr[12] == 0xfe:
        return true
  of 8:
    if not memcmp(addr(`addr`.s6_addr[9]), addr(lladdr.`addr`[1]), lladdr.len - 1) and
        (`addr`.s6_addr[8] xor 0x02) == lladdr.`addr`[0]:
      return true
  return false

## *
##  @brief Get sockaddr_in6 from sockaddr. This is a helper so that
##  the code calling this function can be made shorter.
##
##  @param addr Socket address
##
##  @return Pointer to IPv6 socket address
##

proc net_sin6*(`addr`: ptr sockaddr): ptr sockaddr_in6 =
  return cast[ptr sockaddr_in6](`addr`)

## *
##  @brief Get sockaddr_in from sockaddr. This is a helper so that
##  the code calling this function can be made shorter.
##
##  @param addr Socket address
##
##  @return Pointer to IPv4 socket address
##

proc net_sin*(`addr`: ptr sockaddr): ptr sockaddr_in =
  return cast[ptr sockaddr_in](`addr`)

## *
##  @brief Get sockaddr_in6_ptr from sockaddr_ptr. This is a helper so that
##  the code calling this function can be made shorter.
##
##  @param addr Socket address
##
##  @return Pointer to IPv6 socket address
##

proc net_sin6_ptr*(`addr`: ptr sockaddr_ptr): ptr sockaddr_in6_ptr =
  return cast[ptr sockaddr_in6_ptr](`addr`)

## *
##  @brief Get sockaddr_in_ptr from sockaddr_ptr. This is a helper so that
##  the code calling this function can be made shorter.
##
##  @param addr Socket address
##
##  @return Pointer to IPv4 socket address
##

proc net_sin_ptr*(`addr`: ptr sockaddr_ptr): ptr sockaddr_in_ptr =
  return cast[ptr sockaddr_in_ptr](`addr`)

## *
##  @brief Get sockaddr_ll_ptr from sockaddr_ptr. This is a helper so that
##  the code calling this function can be made shorter.
##
##  @param addr Socket address
##
##  @return Pointer to linklayer socket address
##

proc net_sll_ptr*(`addr`: ptr sockaddr_ptr): ptr sockaddr_ll_ptr =
  return cast[ptr sockaddr_ll_ptr](`addr`)

## *
##  @brief Get sockaddr_can_ptr from sockaddr_ptr. This is a helper so that
##  the code needing this functionality can be made shorter.
##
##  @param addr Socket address
##
##  @return Pointer to CAN socket address
##

proc net_can_ptr*(`addr`: ptr sockaddr_ptr): ptr sockaddr_can_ptr =
  return cast[ptr sockaddr_can_ptr](`addr`)

## *
##  @brief Convert a string to IP address.
##
##  @param family IP address family (AF_INET or AF_INET6)
##  @param src IP address in a null terminated string
##  @param dst Pointer to struct in_addr if family is AF_INET or
##  pointer to struct in6_addr if family is AF_INET6
##
##  @note This function doesn't do precise error checking,
##  do not use for untrusted strings.
##
##  @return 0 if ok, < 0 if error
##

proc net_addr_pton*(family: sa_family_t; src: cstring; dst: pointer): cint {.syscall,
    importc: "net_addr_pton", header: "net_ip.h".}
## *
##  @brief Convert IP address to string form.
##
##  @param family IP address family (AF_INET or AF_INET6)
##  @param src Pointer to struct in_addr if family is AF_INET or
##         pointer to struct in6_addr if family is AF_INET6
##  @param dst Buffer for IP address as a null terminated string
##  @param size Number of bytes available in the buffer
##
##  @return dst pointer if ok, NULL if error
##

proc net_addr_ntop*(family: sa_family_t; src: pointer; dst: cstring; size: csize_t): cstring {.
    syscall, importc: "net_addr_ntop", header: "net_ip.h".}
## *
##  @brief Parse a string that contains either IPv4 or IPv6 address
##  and optional port, and store the information in user supplied
##  sockaddr struct.
##
##  @details Syntax of the IP address string:
##    192.0.2.1:80
##    192.0.2.42
##    [2001:db8::1]:8080
##    [2001:db8::2]
##    2001:db::42
##  Note that the str_len parameter is used to restrict the amount of
##  characters that are checked. If the string does not contain port
##  number, then the port number in sockaddr is not modified.
##
##  @param str String that contains the IP address.
##  @param str_len Length of the string to be parsed.
##  @param addr Pointer to user supplied struct sockaddr.
##
##  @return True if parsing could be done, false otherwise.
##

proc net_ipaddr_parse*(str: cstring; str_len: csize_t; `addr`: ptr sockaddr): bool {.
    importc: "net_ipaddr_parse", header: "net_ip.h".}
## *
##  @brief Compare TCP sequence numbers.
##
##  @details This function compares TCP sequence numbers,
##           accounting for wraparound effects.
##
##  @param seq1 First sequence number
##  @param seq2 Seconds sequence number
##
##  @return < 0 if seq1 < seq2, 0 if seq1 == seq2, > 0 if seq > seq2
##

proc net_tcp_seq_cmp*(seq1: uint32; seq2: uint32): int32 =
  return (int32)(seq1 - seq2)

## *
##  @brief Check that one TCP sequence number is greater.
##
##  @details This is convenience function on top of net_tcp_seq_cmp().
##
##  @param seq1 First sequence number
##  @param seq2 Seconds sequence number
##
##  @return True if seq > seq2
##

proc net_tcp_seq_greater*(seq1: uint32; seq2: uint32): bool =
  return net_tcp_seq_cmp(seq1, seq2) > 0

## *
##  @brief Convert a string of hex values to array of bytes.
##
##  @details The syntax of the string is "ab:02:98:fa:42:01"
##
##  @param buf Pointer to memory where the bytes are written.
##  @param buf_len Length of the memory area.
##  @param src String of bytes.
##
##  @return 0 if ok, <0 if error
##

proc net_bytes_from_str*(buf: ptr uint8; buf_len: cint; src: cstring): cint {.
    importc: "net_bytes_from_str", header: "net_ip.h".}
## *
##  @brief Convert Tx network packet priority to traffic class so we can place
##  the packet into correct Tx queue.
##
##  @param prio Network priority
##
##  @return Tx traffic class that handles that priority network traffic.
##

proc net_tx_priority2tc*(prio: net_priority): cint {.importc: "net_tx_priority2tc",
    header: "net_ip.h".}
## *
##  @brief Convert Rx network packet priority to traffic class so we can place
##  the packet into correct Rx queue.
##
##  @param prio Network priority
##
##  @return Rx traffic class that handles that priority network traffic.
##

proc net_rx_priority2tc*(prio: net_priority): cint {.importc: "net_rx_priority2tc",
    header: "net_ip.h".}
## *
##  @brief Convert network packet VLAN priority to network packet priority so we
##  can place the packet into correct queue.
##
##  @param priority VLAN priority
##
##  @return Network priority
##

proc net_vlan2priority*(priority: uint8): net_priority =
  ##  Map according to IEEE 802.1Q
  let vlan2priority: UncheckedArray[uint8]
  if priority >= ARRAY_SIZE(vlan2priority):
    ##  Use Best Effort as the default priority
    return NET_PRIORITY_BE
  return cast[net_priority](vlan2priority[priority])

## *
##  @brief Convert network packet priority to network packet VLAN priority.
##
##  @param priority Packet priority
##
##  @return VLAN priority (PCP)
##

proc net_priority2vlan*(priority: net_priority): uint8 =
  ##  The conversion works both ways
  return cast[uint8](net_vlan2priority(priority))

## *
##  @brief Return network address family value as a string. This is only usable
##  for debugging.
##
##  @param family Network address family code
##
##  @return Network address family as a string, or NULL if family is unknown.
##

proc net_family2str*(family: sa_family_t): cstring {.importc: "net_family2str",
    header: "net_ip.h".}
## *
##  @}
##
